Readme pasos para correr main